--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
   <link href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css" rel="stylesheet">
-  <link href="/css/animated-headline.css" rel="stylesheet">
-  <link href="css/agency.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body id="page-top" class="index">
@@ -117,7 +116,7 @@
         </div>
       </div>
       <div class="row grid">
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -134,7 +133,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -153,7 +152,7 @@
           </div>
 
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -172,7 +171,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item pro">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item pro">
           <div class="item-wrapper">
             <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -190,7 +189,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item personal">
           <div class="item-wrapper">
             <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -208,7 +207,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item personal">
           <div class="item-wrapper">
             <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
@@ -226,7 +225,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item element-item personal">
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item personal">
             <div class="item-wrapper">
             <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                 <div class="portfolio-hover">
@@ -257,73 +256,73 @@
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-html5-plain colored"></i>
           </span>
           <h5 class="service-heading">HTML5</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-css3-plain colored"></i>
           </span>
           <h5 class="service-heading">CSS3</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-sass-original colored"></i>
           </span>
           <h5 class="service-heading">SASS/SCSS</h5>
         </div>
 
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-javascript-plain colored"></i>
 
           </span>
           <h5 class="service-heading">Javascript</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
               <i class="devicon-webpack-plain colored"></i>
 
           </span>
           <h5 class="service-heading">Webpack</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
               <i class="devicon-vuejs-plain colored"></i>
             </span>
           <h5 class="service-heading">VueJS</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-react-original colored"></i>
 
           </span>
           <h5 class="service-heading">ReactJS</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-angularjs-plain colored"></i>
 
           </span>
           <h5 class="service-heading">AngularJS</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-bootstrap-plain colored"></i>
 
           </span>
           <h5 class="service-heading">Bootstrap</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-jquery-plain colored"></i>
           </span>
           <h5 class="service-heading">JQuery</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-gulp-plain colored"></i>
           </span>
@@ -331,27 +330,27 @@
         </div>
 
 
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-nodejs-plain colored"></i>
           </span>
           <h5 class="service-heading">NodeJS</h5>
         </div>
 
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
               <i class="devicon-amazonwebservices-original colored"></i>
 
           </span>
           <h5 class="service-heading">AWS</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <img src="/img/shopify.svg" style="width:60px; height: 60px; margin-top:-25px;">
           </span>
           <h5 class="service-heading">Shopify CMS</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <img src="/img/apple-touch-icon@2.png" style="width:80px; height: 80px; margin-top:-25px;">
 
@@ -359,7 +358,7 @@
           <h5 class="service-heading">Craft CMS</h5>
         </div>
 
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicons devicons-responsive"></i>
 
@@ -368,14 +367,14 @@
         </div>
 
 
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-github-plain colored"></i>
 
           </span>
           <h5 class="service-heading">GitHub</h5>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
             <i class="devicon-git-plain colored"></i>
 
