--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
   <link href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="/styles/main.css" rel="stylesheet">
 </head>
 
 <body id="page-top" class="index">
@@ -402,7 +402,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <p class="large text-muted">Born in Southern California and grew up on the island of Taiwan, I always had a curious mind and chose to pursue my passion
+          <p class="large">Born in Southern California and grew up on the island of Taiwan, I always had a curious mind and chose to pursue my passion
             for the arts at The School of Visual Arts in New York City graduating with a degree in film production. After
             moving to LA and working as video editor for 2 years I discovered how creativity could be brought into the realm of technology and began to write code. It was a refreshing new discovery. So I decided to transition myself into tech. Packed my bags and moved to Northern California, the heart of the technology industry, where I continue to learn new skills and build meaningful bodies of work.</p>
           <br />
@@ -762,7 +762,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-  <script src="./js/agency.js"></script>
+  <script src="./scripts/main.js"></script>
 
 </body>
 
