--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
   <link href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css" rel="stylesheet">
-  <link href="/styles/main.css" rel="stylesheet">
+  <link href="/styles/main.min.css" rel="stylesheet">
 </head>
 
 <body id="page-top" class="index">
@@ -757,12 +757,10 @@
 
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="./js/particles.min.js"></script>
-  <script src="./js/animated-headline.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-  <script src="js/jqBootstrapValidation.js"></script>
   <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-  <script src="./scripts/main.js"></script>
+  <script src="./scripts/main.min.js"></script>
 
 </body>
 
