--- a/index.html
+++ b/index.html
@@ -657,7 +657,8 @@
                 <!-- Project Details Go Here -->
                 <h2>Orthoscience</h2>
                 <p class="item-intro text-muted">Built for Orthodontist</p>
-                <img class="img-responsive img-centered" src="/img/os/Screen Shot 2018-07-19 at 12.56.01 PM.png" alt="">
+                <img class="img-responsive img-centered" src="/img/os/casecard.png" alt="">
+                <img class="img-responsive img-centered" src="/img/os/message.png" alt="">
                 <img class="img-responsive img-centered" src="/img/os/Screen Shot 2018-07-19 at 12.57.37 PM.png" alt="">
                 <p>Orthosciene is a new startup based in Mill Valley, building a modern application for orthodontist to share and evaluate cases in on integrated app. This website was their marketing site designed to market their product.</p>
                 <p>HTML/CSS | Javascript | Craft CMS | JQuery | s3 | Webpack | SASS</p>
