--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             </div>
           </div>
         </div>
+        
         <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item personal">
           <div class="item-wrapper">
             <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
@@ -241,6 +242,25 @@
                 <p class="text-muted">Front-End Web App</p>
             </div>
             </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-6 col-xs-12 portfolio-item element-item pro">
+          <div class="item-wrapper">
+            <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <div class="img" style="background-image: url('/img/go/go-home.png')"></div>
+
+              <img src="img/spacemx/home.png" class="img-responsive" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Go Car Insurance</h4>
+              <p class="text-muted">Front-End Web App</p>
+            </div>
+          </div>
         </div>
 
       </div>
@@ -755,6 +775,45 @@
     </div>
   </div>
   <!-- Portfolio Modal 8 -->
+
+  <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl">
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <h2>Go Insurance</h2>
+                <p class="item-intro text-muted">The future of car insurance in your pocket</p>
+                <img class="img-responsive img-centered" src="/img/go/go-info.png" alt="">
+                <img class="img-responsive img-centered" src="/img/go/go-email.png" alt="">
+                <img class="img-responsive img-centered" src="/img/go/go-phone.png" alt="">
+                <img class="img-responsive img-centered" src="/img/go/go-privacy.png" alt="">
+                <h4>About</h4>
+                <p>the first truly on-demand car insurance.</p>
+                <p>HTML/CSS | JQuery | Javscript | Bootstrap | Gulp | SASS | Firebase | Hugo</p>
+                <ul class="list-inline">
+                  <li>
+                    <a id="website" target="_blank" href="https://goin-001-goinsurance.firebaseapp.com/">Checkout the Website</a>
+                  </li>
+                  <!--<li><a id="website" target="_blank" href="https://wesleyhuang23.github.io/zero-oxidation/#/">Checkout the Site</a></li>-->
+                </ul>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">
+                  <i class="fa fa-times"></i> Close Project</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="./js/particles.min.js"></script>
