--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
               </div>
               <div class="img" style="background-image: url('/img/Screen Shot 2018-07-19 at 12.55.09 PM.png')"></div>
-              <img src="/img/Screen Shot 2018-07-19 at 12.55.09 PM.png" class="img-responsive" alt="">
+              <img class="lazy" data-src="/img/Screen Shot 2018-07-19 at 12.55.09 PM.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Orthoscience</h4>
@@ -143,7 +143,7 @@
               </div>
               <div class="img" style="background-image: url('/img/Screen Shot 2018-07-19 at 1.00.38 PM.png')"></div>
 
-              <img src="img/home.png" class="img-responsive" alt="">
+              <img class="lazy" data-src="img/home.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>The Learning Accelerator</h4>
@@ -161,7 +161,7 @@
                 </div>
               </div>
               <div class="img" style="background-image: url('/img/Screen Shot 2018-07-19 at 1.01.34 PM.png')"></div>
-              <img src="https://raw.githubusercontent.com/wesleyhuang23/zero-oxidation/master/screenshots/home.png" class="img-responsive"
+              <img class="lazy" data-src="https://raw.githubusercontent.com/wesleyhuang23/zero-oxidation/master/screenshots/home.png" class="img-responsive"
                 alt="">
             </a>
             <div class="portfolio-caption">
@@ -181,7 +181,7 @@
               </div>
               <div class="img" style="background-image: url('/img/Screen Shot 2018-07-18 at 4.30.04 PM.png')"></div>
 
-              <img src="img/spacemx/home.png" class="img-responsive" alt="">
+              <img class="lazy" data-src="img/spacemx/home.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Currant</h4>
@@ -200,7 +200,7 @@
               </div>
               <div class="img" style="background-image: url('img/fanflix.jpg')"></div>
 
-              <img src="img/portfolio/fanflix.jpg" class="img-responsive" alt="">
+              <img class="lazy" data-src="img/portfolio/fanflix.jpg" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Fanflix</h4>
@@ -218,7 +218,7 @@
               </div>
               <div class="img" style="background-image: url('img/instagram.png')"></div>
 
-              <img src="img/instagram.png" class="img-responsive" alt="">
+              <img class="lazy" data-src="img/instagram.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Instagram Clone</h4>
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <div class="img" style="background-image: url('img/Screen Shot 2017-05-27 at 9.44.14 PM.png')"></div>
-                <img src="img/igreet/Screen Shot 2017-05-27 at 9.44.14 PM.png" class="img-responsive" alt="">
+                <img class="lazy" data-src="img/igreet/Screen Shot 2017-05-27 at 9.44.14 PM.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
                 <h4>iGreet</h4>
@@ -254,7 +254,7 @@
               </div>
               <div class="img" style="background-image: url('/img/go-home.png')"></div>
 
-              <img src="img/spacemx/home.png" class="img-responsive" alt="">
+              <img class="lazy" data-src="img/spacemx/home.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Go Car Insurance</h4>
@@ -366,13 +366,13 @@
         </div>
         <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
-            <img src="/img/shopify.svg" style="width:60px; height: 60px; margin-top:-25px;">
+            <img class="lazy" data-src="/img/shopify.svg" style="width:60px; height: 60px; margin-top:-25px;">
           </span>
           <h5 class="service-heading">Shopify CMS</h5>
         </div>
         <div class="col-xs-6 col-sm-2">
           <span class="fa-stack fa-4x">
-            <img src="/img/apple-touch-icon@2.png" style="width:80px; height: 80px; margin-top:-25px;">
+            <img class="lazy" data-src="/img/apple-touch-icon@2.png" style="width:80px; height: 80px; margin-top:-25px;">
 
           </span>
           <h5 class="service-heading">Craft CMS</h5>
@@ -416,7 +416,7 @@
       <div class="row" id="team-id">
         <div class="col-sm-4">
           <div class="team-member">
-            <img src="img/headshot2.png" class="img-responsive img-circle" alt="">
+            <img data-src="img/headshot2.png" class="img-responsive img-circle lazy" alt="">
           </div>
         </div>
       </div>
@@ -431,7 +431,7 @@
             <p>
               <br />
               <a href="https://www.codewars.com/users/wesleyhuang">
-                <img src="https://www.codewars.com/users/wesleyhuang/badges/large">
+                <img class="lazy" data-src="https://www.codewars.com/users/wesleyhuang/badges/large">
               </a>
 
         </div>
@@ -816,6 +816,8 @@
   </div>
 
   <script src="vendor/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
   <script src="./js/particles.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
