--- a/index.html
+++ b/index.html
@@ -548,11 +548,11 @@
               <div class="modal-body">
                 <h2>Fanflix</h2>
                 <p class="item-intro text-muted">Made by a Movie Fan for Movie Fans</p>
-                <img class="img-responsive img-centered" src="https://raw.githubusercontent.com/wesleyhuang23/fanflix/master/screenshots/details.png"
+                <img class="img-responsive img-centered" src="/img/hacksaw-details.png"
                   alt="Movie Details Page">
-                <img class="img-responsive img-centered" src="https://github.com/wesleyhuang23/fanflix/blob/master/screenshots/emma%20with%20background.png?raw=true"
+                <img class="img-responsive img-centered" src="/img/emma with background.png"
                   alt="People Detailed Page">
-                <img class="img-responsive img-centered" src="https://github.com/wesleyhuang23/fanflix/blob/master/screenshots/googlemaps.png?raw=true"
+                <img class="img-responsive img-centered" src="/img/googlemaps.png"
                   alt="Theater Detailed Page">
                 <img class="img-responsive img-centered" src="./img/mobile.png" alt="Theater Detailed Page">
                 <h4>About</h4>
