--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     </div>
   </section>
   <!-- Contact Section -->
-  <section id="contact">
+  <section id="contact" class="lazy" data-bg="url('https://c1.staticflickr.com/4/3242/3136996224_2daa077a9f_b.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -502,8 +502,8 @@
                 <!-- Project Details Go Here -->
                 <h2>Instagram Clone</h2>
                 <p class="item-intro text-muted">Sharing Photos comes to the desktop</p>
-                <img class="img-responsive img-centered" src="img/expanded view.png" alt="">
-                <img class="img-responsive img-centered" src="img/profile.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="img/expanded view.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="img/profile.png" alt="">
                 <h4>About</h4>
                 <p>A clone of the Instagram web app with addition to upload photos and applying filters from computer or phone.
                   Logging in with local auth users can choose to follow people and see their posts on their own feed. Comments
@@ -548,13 +548,13 @@
               <div class="modal-body">
                 <h2>Fanflix</h2>
                 <p class="item-intro text-muted">Made by a Movie Fan for Movie Fans</p>
-                <img class="img-responsive img-centered" src="/img/hacksaw-details.png"
+                <img class="img-responsive img-centered lazy" data-src="/img/hacksaw-details.png"
                   alt="Movie Details Page">
-                <img class="img-responsive img-centered" src="/img/emma with background.png"
+                <img class="img-responsive img-centered lazy" data-src="/img/emma with background.png"
                   alt="People Detailed Page">
-                <img class="img-responsive img-centered" src="/img/googlemaps.png"
+                <img class="img-responsive img-centered lazy" data-src="/img/googlemaps.png"
                   alt="Theater Detailed Page">
-                <img class="img-responsive img-centered" src="./img/mobile.png" alt="Theater Detailed Page">
+                <img class="img-responsive img-centered lazy" data-src="./img/mobile.png" alt="Theater Detailed Page">
                 <h4>About</h4>
                 <p>A Movie database website that allows user to search up to 900,000 movie titles. Searching is done in real
                   time using JQuery keyup, along with people and movie theaters. Users can browse movie detailed pages for
@@ -601,9 +601,9 @@
                 <!-- Project Details Go Here -->
                 <h2>The Learning Accelerator</h2>
                 <p class="item-intro text-muted">Blended & Personalized Learning At Work</p>
-                <img class="img-responsive img-centered" src="/img/company.png"
+                <img class="img-responsive img-centered lazy" data-src="/img/company.png"
                   alt="">
-                <img class="img-responsive img-centered" src="/img/blog.png"
+                <img class="img-responsive img-centered lazy" data-src="/img/blog.png"
                   alt="">
                 <h4>About</h4>
                 <p>The Learning Accelerator is a Non-profit orgainization that specializes in the personalized learning experience for student across the country. Providing them with one on one interactions with teachers and technology to accelerate their learning experience. This was a Craft Build of their Company and main site.</p>
@@ -640,8 +640,8 @@
                 <!-- Project Details Go Here -->
                 <h2>Workstate</h2>
                 <p class="item-intro text-muted">Solving Complex Technology Problems</p>
-                <img class="img-responsive img-centered" src="/img/Screen Shot 2018-07-19 at 1.02.15 PM.png" alt="">
-                <img class="img-responsive img-centered" src="/img/Screen Shot 2018-07-19 at 1.02.38 PM.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/Screen Shot 2018-07-19 at 1.02.15 PM.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/Screen Shot 2018-07-19 at 1.02.38 PM.png" alt="">
                 <h4>About</h4>
                 <p>Workstate is a Craft CMS project, which was a redesign of their old website that was built on hubspot.</p>
                 <p>HTML/CSS | Javascript | JQuery | Bootstrap | Gulp | SASS | Craft CMS | s3 </p>
@@ -677,9 +677,9 @@
                 <!-- Project Details Go Here -->
                 <h2>Orthoscience</h2>
                 <p class="item-intro text-muted">Built for Orthodontist</p>
-                <img class="img-responsive img-centered" src="/img/casecard.png" alt="">
-                <img class="img-responsive img-centered" src="/img/message.png" alt="">
-                <img class="img-responsive img-centered" src="/img/Screen Shot 2018-07-19 at 12.57.37 PM.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/casecard.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/message.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/Screen Shot 2018-07-19 at 12.57.37 PM.png" alt="">
                 <p>Orthosciene is a new startup based in Mill Valley, building a modern application for orthodontist to share and evaluate cases in on integrated app. This website was their marketing site designed to market their product.</p>
                 <p>HTML/CSS | Javascript | Craft CMS | JQuery | s3 | Webpack | SASS</p>
                 <ul class="list-inline">
@@ -714,8 +714,8 @@
                 <!-- Project Details Go Here -->
                 <h2>Currant</h2>
                 <p class="item-intro text-muted">The Brighter way to save Energy</p>
-                <img class="img-responsive img-centered" src="/img/Screen Shot 2018-07-18 at 4.30.46 PM.png" alt="">
-                <img class="img-responsive img-centered" src="/img/Screen Shot 2018-07-18 at 4.31.14 PM.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/Screen Shot 2018-07-18 at 4.30.46 PM.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/Screen Shot 2018-07-18 at 4.31.14 PM.png" alt="">
                 <h4>About</h4>
                 <p>Currant is a new startup based in Northon California. The website was built to market their new product. A socket monitor that measures the level of electricity being using in the home.</p>
                 <p>HTML/CSS | JQuery | Javscript | Bootstrap | Gulp | SASS | S3</p>
@@ -751,8 +751,8 @@
                 <!-- Project Details Go Here -->
                 <h2>iGreet</h2>
                 <p class="item-intro text-muted">A daily greeting</p>
-                <img class="img-responsive img-centered" src="img/img.png" alt="">
-                <img class="img-responsive img-centered" src="img/weather.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="img/img.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="img/weather.png" alt="">
                 <h4>About</h4>
                 <p>A clone of the chrome extention called momentum. Has a digital clock that will greet with the correct time
                   of day, update quote and image on a new day. Create a todo list that is stored using localStorage.</p>
@@ -792,10 +792,10 @@
                 <!-- Project Details Go Here -->
                 <h2>Go Insurance</h2>
                 <p class="item-intro text-muted">The future of car insurance in your pocket</p>
-                <img class="img-responsive img-centered" src="/img/go-info.png" alt="">
-                <img class="img-responsive img-centered" src="/img/go-email.png" alt="">
-                <img class="img-responsive img-centered" src="/img/go-phone.png" alt="">
-                <img class="img-responsive img-centered" src="/img/go-privacy.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/go-info.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/go-email.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/go-phone.png" alt="">
+                <img class="img-responsive img-centered lazy" data-src="/img/go-privacy.png" alt="">
                 <h4>About</h4>
                 <p>A marketing website for the mobile car insurance app GO. This was the first project I built using hugo a static site generator written in the go programming language. Deployed using firebase</p>
                 <p>HTML/CSS | JQuery | Javscript | Bootstrap | Gulp | SASS | Firebase | Hugo</p>
@@ -816,8 +816,7 @@
   </div>
 
   <script src="vendor/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@10.19.0/dist/lazyload.min.js"></script>
   <script src="./js/particles.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
